# linux-lottie-salute

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: package.yml
src/: main.cpp  render.h  wayland_backend.cpp  wayland_backend.h  x11_backend.cpp  x11_backend.h
